--- a/stlye.css
+++ b/stlye.css
@@ -134,8 +134,9 @@ nav.fill .navigation:hover:after {
     font-size: 40px;
     font-family: 'Viga', sans-serif;
 }
+
 #vivian:hover {
-    color: red;
+    color: hotpink;
 }
 
 #check:hover {
@@ -184,42 +185,53 @@ nav.fill .navigation:hover:after {
     font-family: 'Viga', sans-serif;
 }
 
-
-#thumbNails {
+.thumbNails {
     padding-top: 100px;
     display: grid;
-    grid-template-columns: 0px 500px 330px 300px;
-    grid-template-rows: 20px 100px 200px 400px 300px 100px;
+    grid-template-columns: 0px 650px 330px 300px;
+    grid-template-rows: 500px 100px 200px 50px 250px 100px;
     max-width: 1200px;
     margin: 0 auto;
+    /* font-family: 'Viga', sans-serif; */
+    font-family: 'Varela', sans-serif;
 }
-#thumbNails img{
-	opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+
+.thumbNails h3 {
+    width: 500px;
 }
-/* #dosBot:hover{
-	opacity: .5;
-} */
-#ccl:hover {
-	opacity: .5;
+
+#aapi {
+    grid-column: 3;
+    grid-row: 2;
 }
+
 #dosBot {
-    width: 800px;
-    height: 480px;
     grid-column: 2;
-    grid-row: 1; 
-    border-radius: 10px;
+    grid-row: 1;
 }
-#uxResearcher{
+
+#ccl {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+
+#ccl h3 {
+    width: 500px;
+}
+
+#uxResearcher {
     grid-column: 4;
     grid-row: 2;
 }
-#ccl {
-    width: 525px;
-    height: 430px;
-    grid-column: 4;
+
+#DOL {
+    grid-column: 3;
     grid-row: 1;
+}
+
+#DOL h3 {
+    width: 500px;
 }
 
 .connect {
@@ -357,7 +369,6 @@ footer {
     grid-row: 6;
     width: 24px;
     height: 24px;
-    
 }
 
 .chevron {
