--- a/stlye.css
+++ b/stlye.css
@@ -9,7 +9,27 @@
 .dropbtn {
     background-color: transparent;
 }
-
+#projects a {
+    color: black;
+    text-decoration: none;
+}
+#projects a :hover {
+    color: green;
+}
+#resume a {
+    color: black;
+    text-decoration: none;
+}
+#resume a :hover {
+    color: green;
+}
+#contact a {
+    color: black;
+    text-decoration: none;
+}
+#contact a :hover {
+    color: hotpink;
+}
 /* The container <div> - needed to position the dropdown content */
 
 .dropdown {
@@ -34,7 +54,7 @@
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
-    text-decoration: none;
+    text-decoration: none; 
     display: block;
 }
 
