--- a/stlye.css
+++ b/stlye.css
@@ -5,6 +5,14 @@
     margin: 0 auto;
     font-family: 'Varela', sans-serif;
 }
+#about a {
+    color: black;
+    text-decoration: none;
+}
+#about a :hover{
+color: hotpink;
+}
+
 
 .dropbtn {
     background-color: transparent;
@@ -209,7 +217,7 @@ nav.fill .navigation:hover:after {
     padding-top: 100px;
     display: grid;
     grid-template-columns: 0px 650px 330px 300px;
-    grid-template-rows: 500px 100px 200px 50px 250px 100px;
+    grid-template-rows: 550px 100px 200px 50px 250px 100px;
     max-width: 1200px;
     margin: 0 auto;
     /* font-family: 'Viga', sans-serif; */
