only stop aapi app
stop aapi app social movement

--- a/project.css
+++ b/project.css
@@ -6,6 +6,7 @@
     font-family: 'Varela', sans-serif;
     padding-top: 20px;
 }
+
 #contact a {
     color: black;
     text-decoration: none;
@@ -14,23 +15,29 @@
 #contact a :hover {
     color: hotpink;
 }
+
 #about a {
     color: black;
 }
+
 #about a {
     text-decoration: none;
 }
+
 #about a :hover {
     color: hotpink;
     text-decoration: none;
 }
+
 #projects a {
     color: black;
     text-decoration: none;
 }
+
 #projects a :hover {
     color: green;
 }
+
 #projects {
     grid-column: 3;
 }
@@ -50,33 +57,38 @@
     position: relative;
     display: inline-block;
 }
+
 .jumbotron {
     max-width: 1200px;
     margin: 0 auto;
     height: 550px;
     background-image: url(stop\ aapi\ hate!.png);
 }
+
 .lead {
     padding-top: 420px;
     width: 350px;
     font-size: 14px;
 }
+
 .overview {
     max-width: 1200px;
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
     display: grid;
-    grid-template-columns: 200px 100px 450px 400px  ;
+    grid-template-columns: 200px 100px 450px 400px;
     grid-template-rows: 100px 20px 20px 20px 20px 20px 20px 20px 20px 20px 200px;
 }
-.overHead{
+
+.overHead {
     padding-top: 25px;
     width: 400px;
-
 }
+
 .overview h3 {
     font-size: 18px;
 }
+
 .overview p {
     font-family: 'Varela', sans-serif;
     font-size: 16px;
@@ -86,69 +98,288 @@
     grid-row: 2;
     grid-column: 2;
 }
+
 .role {
     grid-row: 2;
     grid-column: 4;
 }
+
 .team {
     padding-top: 50px;
     grid-row: 3;
     grid-column: 4;
 }
+
 .tools {
     padding-top: 60px;
     grid-row: 6;
     grid-column: 4;
 }
+
 .duration {
     padding-top: 80px;
     grid-row: 9;
     grid-column: 4;
 }
-.problem {
+
+.background {
     padding-top: 30px;
-    height: 600px;
+    height: 500px;
     max-width: 1200px;
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
-    background-image:url(pink.png) ;
+    background-image: url(pink.png);
 }
+
+.background h5 {
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+.background p {
+    width: 1150px;
+    padding-left: 30px;
+    font-family: 'Varela', sans-serif;
+    font-size: 16px;
+}
+
+.heading4 h5 {
+    padding-top: 10px;
+    padding-left: 30px;
+    color: chocolate;
+    text-align: center;
+}
+
+.heading4 {
+    padding-top: 100px;
+    max-width: 1000px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    text-align: center;
+    padding-bottom: 100px;
+    color: lightsalmon;
+}
+
+.problem {
+    padding-top: 30px;
+    height: 400px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    background-image: url(pink.png);
+}
+
 .problem p {
     width: 1150px;
     padding-left: 30px;
     font-family: 'Varela', sans-serif;
     font-size: 16px;
 }
+
 .paragraph {
-    padding-top: 90px;
+    padding-top: 40px;
 }
+
 .research {
     padding-top: 30px;
     height: 600px;
     max-width: 1200px;
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
+    display: grid;
+    grid-template-columns: 800px 200px;
+    grid-template-rows: 80px 60px 200px 200px;
 }
+.research h1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
 .research p {
-    width: 1150px;
+    width: 800px;
     padding-left: 30px;
     font-family: 'Varela', sans-serif;
     font-size: 16px;
+    grid-column: 1;
+    grid-row: 2;
 }
-.research img {
-    border-radius: 10px;
-    width: 550px;
-}
-.jung {
-    display: flex;
-    justify-content: space-around;
 
+.research img {
+    padding-left: 20px;
 }
+
+.graph {
+    width: 800px;
+    grid-column: 1;
+}
+
+.screen {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.screen2 {
+    grid-column: 2;
+    grid-row: 4;
+}
+.interview {
+    padding-top: 30px;
+    /* height: 1000px; */
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    background-image: url(pink.png);
+}
+.insight {
+    height: 800px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    background-image: url(pink.png);
+    display: grid;
+    grid-template-columns: 470px 3px 250px 480px;
+    grid-template-rows: 400px 60px 200px 10px;
+}
+.interview p {
+    font-family: 'Varela', sans-serif;
+    max-width: 1200px;
+    /* padding-left: 30px; */
+}
+.one {
+    grid-column: 4;
+    grid-row: 1;
+    font-size: 20px;
+}
+.two {
+    grid-column: 1;
+    grid-row: 2;
+    padding-left: 30px;
+    font-size: 20px;
+}
+.insight h1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+.ryan {
+    grid-column: 1;
+    grid-row: 1;
+    max-width: 700px;
+    padding-left: 30px;
+}
+.henry {
+grid-column: 3;
+grid-row: 2;
+max-width: 700px;
+padding-left: 30px;
+}
+.pat{
+    padding-top: 30px;
+    height: 600px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+}
+.pats {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100px 200px;
+}
+.ones {
+    grid-column: 1;
+}
+.twos {
+    grid-column: 2;
+    grid-row: 2;
+    padding-left: 10px;
+}
+
+.sketch {
+    padding-top: 30px;
+    height: 750px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    background-image: url(pink.png);
+}
+.sketch p {
+    font-family: 'Varela', sans-serif;
+    padding-left: 30px;
+    font-size: 20px;
+    padding-top: 30px;
+}
+.sketch img {
+    width: 1100px;
+    padding-left: 100px;
+}
+.testing {
+    padding-top: 30px;
+    height: 750px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+}
+.testing p {
+    font-family: 'Varela', sans-serif;
+    padding-left: 30px;
+    font-size: 20px;
+    padding-top: 30px;
+}
+.tests {
+    padding-left: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 30px;
+}
+.testin {
+    width: 550px; 
+}
+.testinn {
+    width: 550px; 
+}
+.iterations {
+    padding-top: 30px;
+    height: 800px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+    background-image: url(pink.png);
+}
+.iterations img {
+    width: 1000px;
+    padding-left: 200px;
+}
+.iterations p {
+    font-family: 'Varela', sans-serif;
+    padding-left: 30px;
+    font-size: 20px;
+    padding-top: 30px;
+    max-width: 1200px;
+}
+.final {
+    padding-top: 30px;
+    height: 800px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: 'Viga', sans-serif;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr ;
+    background-color: black;
+}
+.final img {
+    width: 370px;
+    grid-column: 2;
+}
+.final h1 {
+    color: white;
+}
+
 .research h5 {
     padding-top: 20px;
     padding-left: 30px;
     font-family: 'Varela', sans-serif;
 }
+
 .research h3 {
     padding-top: 20px;
     padding-left: 30px;
@@ -237,7 +468,7 @@ nav.fill .navigation:hover:after {
 }
 
 footer {
-    padding-top: 800px;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -295,22 +526,24 @@ footer {
     color: green;
 }
 
-.next {
+/* .next {
     padding-top: 10px;
     max-width: 1200px;
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
     /* display: flex;
     justify-content: flex-end; */
-    grid-column-end: 2;
-    grid-column: 5 ;
+    /* grid-column-end: 2;
+    grid-column: 5;
     padding-left: 50px;
 }
+
 .next a {
     text-decoration: none;
     color: red;
-}
-.arrows {
+} */ */
+
+/* .arrows {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     max-width: 1200px;
@@ -324,13 +557,15 @@ footer {
     font-family: 'Viga', sans-serif;
     /* display: flex;
     justify-content: flex-end;; */
-    grid-column-end: 1;
+    /* grid-column-end: 1;
     padding-left: 10px;
-}
-.previous a {
+} */
+
+/* .previous a {
     text-decoration: none;
     color: red;
 }
+
 .link a {
     max-width: 1200px;
     margin: 0 auto;
@@ -345,4 +580,4 @@ footer {
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
     padding-top: 20px;
-}
+} */ */
