--- a/stlye.css
+++ b/stlye.css
@@ -215,20 +215,25 @@ nav.fill .navigation:hover:after {
 
 .thumbNails {
     padding-top: 100px;
-    display: grid;
+    /* display: grid;
     grid-template-columns: 0px 650px 330px 300px;
-    grid-template-rows: 550px 100px 200px 50px 250px 100px;
+    grid-template-rows: 550px 100px 200px 50px 250px 100px; */
     max-width: 1200px;
     margin: 0 auto;
     /* font-family: 'Viga', sans-serif; */
     font-family: 'Varela', sans-serif;
 }
-
+.content img {
+    width: 900px;
+    padding-left: 150px;
+}
 .thumbNails h3 {
     width: 500px;
 }
-
-#aapi {
+.aapi {
+    width: 700px;
+}
+/* #aapi {
     grid-column: 3;
     grid-row: 2;
 }
@@ -246,7 +251,7 @@ nav.fill .navigation:hover:after {
 
 #ccl h3 {
     width: 500px;
-}
+} */
 
 #uxResearcher {
     grid-column: 4;
