--- a/project.css
+++ b/project.css
@@ -541,7 +541,7 @@ footer {
 .next a {
     text-decoration: none;
     color: red;
-} */ */
+} */ 
 
 /* .arrows {
     display: grid;
@@ -580,4 +580,4 @@ footer {
     margin: 0 auto;
     font-family: 'Viga', sans-serif;
     padding-top: 20px;
-} */ */
+} */ 
