updated contact page
contact page updated with links attached

--- a/resume.css
+++ b/resume.css
@@ -189,9 +189,8 @@ footer {
 
 
 .resume {
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    background-image: url(https://www.nicepng.com/png/detail/73-734622_yellow-squiggle-png-squiggles.png)
 }
